--- a/ios/sm_player/Info.plist
+++ b/ios/sm_player/Info.plist
@@ -26,14 +26,13 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -48,5 +47,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>AntDesign.ttf</string>
+		<string>AirbnbCereal-Black.ttf</string>
+		<string>AirbnbCereal-Bold.ttf</string>
+		<string>AirbnbCereal-Book.ttf</string>
+		<string>AirbnbCereal-ExtraBold.ttf</string>
+		<string>AirbnbCereal-Light.ttf</string>
+		<string>AirbnbCereal-Medium.ttf</string>
+	</array>
 </dict>
 </plist>
